[gd_scene load_steps=2 format=2]

[ext_resource path="res://effects/afterimage/afterimage_emitter.gd" type="Script" id=1]

[node name="AfterimageEmitter" type="Node2D"]
script = ExtResource( 1 )

[node name="EmitTimer" type="Timer" parent="."]

[connection signal="timeout" from="EmitTimer" to="." method="_on_EmitTimer_timeout"]
